@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/modules/generic_stage_target.py,v 1.120 2006/01/20 14:32:07 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/modules/generic_stage_target.py,v 1.121 2006/01/20 14:34:57 rocket Exp $
 
 """
 This class does all of the chroot setup, copying of files, etc. It is
@@ -20,7 +20,7 @@ class generic_stage_target(generic_target):
 		
 		self.valid_values.extend(["version_stamp","target","subarch","rel_type","profile",\
 			"snapshot","source_subpath","portage_confdir","cflags","cxxflags",\
-			"ldflags","chost","hostuse","portage_overlay","distcc_hosts"])
+			"ldflags","chost","hostuse","portage_overlay","distcc_hosts","makeopts"])
 		
 		self.set_valid_build_kernel_vars(addlargs)
 		generic_target.__init__(self,myspec,addlargs)
@@ -1013,7 +1013,9 @@ class generic_stage_target(generic_target):
 			elif type(self.settings[x])==types.ListType:
 				#os.environ[varname]=string.join(self.settings[x])
 				self.env[varname]=string.join(self.settings[x])
-	
+		if self.settings.has_key("makeopts"):
+			self.env["MAKEOPTS"]=self.settings["makeopts"]
+			
 	def run(self):
 		self.chroot_lock.write_lock()
 
